test_files/overall_testset/checkpoint2/bad_functionRedefinition.cm
// error: main is defined, but not the last function called

void a(bool x);         
void a(bool x);             // second prototype (even if identical) not allowed

void a(bool x){
    return 1;
}
void a(bool x){             // second proper declaration not allowed
    return 2;
}
void y(int x);
void y(bool x);             // prototypes w/ different args still not allowed (same function name)

void y(int a, int b) {      // different len args not allowed
    int c;
    c = a + b;
    output(c);
}

void x(int x);
void x(bool x) {            // args don't match
    int x2;
}

int z(void) {
    return 1;
}

int z(int a, int b) {       // different args
    return 2;
}

void main(void) {
    int x;
    // int x[4];

    x = 1;
    x(x);
}

void main_but_the_other_one(void){
    return 1;
}